[package]
name = "egui_listview"
version = "0.1.4"
edition = "2021"

authors = ["john <hongliang-qin@foxmail.com>"]
license = "MIT"
homepage = "https://github.com/qhliang/egui_listview"
repository = "https://github.com/qhliang/egui_listview"
description = "A list view widget for egui."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { version = "0.27", default-features = false }

[workspace]
members = ["examples/*"]
