[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.10"
egui_listview = { path = "../../../egui_listview" }
eframe = "0.22"

[build]
target-dir = "../target"